# RUST-Practise

./: README.md  fiboanimation.py  main.rs  tauri_rust_project_guide (1).docx
100 exercises - solution/100-exercises-to-learn-rust/: Cargo.toml
100 exercises - solution/100-exercises-to-learn-rust/exercises/02_basic_calculator/05_factorial/src/: lib.rs
100 exercises - solution/100-exercises-to-learn-rust/exercises/02_basic_calculator/07_for/src/: lib.rs
100 exercises - solution/100-exercises-to-learn-rust/exercises/02_basic_calculator/08_overflow/: Cargo.toml
100 exercises - solution/100-exercises-to-learn-rust/exercises/02_basic_calculator/10_as_casting/src/: lib.rs
100 exercises - solution/100-exercises-to-learn-rust/exercises/03_ticket_v1/01_struct/src/: lib.rs
100 exercises - solution/100-exercises-to-learn-rust/exercises/03_ticket_v1/02_validation/src/: lib.rs
100 exercises - solution/100-exercises-to-learn-rust/exercises/03_ticket_v1/03_modules/src/: lib.rs
100 exercises - solution/100-exercises-to-learn-rust/exercises/03_ticket_v1/04_visibility/src/: lib.rs
100 exercises - solution/100-exercises-to-learn-rust/exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercise 5/my_library/src/: lib.rs
exercise 7/my_library/src/: lib.rs
exercise 8/my_library/src/: lib.rs
my_library/: 3.rs  test.rs
my_library/exercise 4/src/: lib.rs
my_library/exercise 5/src/: lib.rs
