[package]
name = "overflow"
version = "0.1.0"
edition = "2021"

[lints.rust]
# We silence dead code warnings for the time being in order to reduce
# compiler noise.
# We'll re-enable them again once we explain how visibility works in Rust.
dead_code = "allow"
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
